# printable-shell-command-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: CI.yaml
examples/: cargo-version.rs  echo.rs  ffmpeg.rs
src/: command.rs  escape.rs  format.rs  formatting_options.rs  lib.rs  print_builder.rs  printable_shell_command.rs  shell_printable.rs
