[package]
name = "printable-shell-command"
version = "0.1.1"
edition = "2024"
description = "A helper library to print shell commands."
license = "MIT"
homepage = "https://github.com/lgarron/printable-shell-command-rs"
documentation = "https://github.com/lgarron/printable-shell-command-rs"
repository = "https://github.com/lgarron/printable-shell-command-rs"
keywords = ["shell"]


[dependencies]
regex = "1.11.3"
