[package]
name = "printable-shell-command"
version = "0.2.2"
edition = "2021"
description = "A helper library to print shell commands."
license = "MIT"
homepage = "https://github.com/lgarron/printable-shell-command-rs"
documentation = "https://github.com/lgarron/printable-shell-command-rs"
repository = "https://github.com/lgarron/printable-shell-command-rs"
keywords = ["shell"]


[dependencies]
itertools = "0.14.0"
regex = "1.11.3"
